syntax = "proto3";

package admin.service.v1;

import "gnostic/openapi/v3/annotations.proto";
import "google/api/annotations.proto";
import "google/api/field_behavior.proto";
import "google/protobuf/empty.proto";
import "user/service/v1/user.proto";

option go_package = "github.com/devexps/go-monolithic-demo/gen/api/go/admin/service/v1;v1";

// AuthenticationService
service AuthenticationService {
  // Login
  rpc Login (LoginRequest) returns (LoginResponse) {
    option (google.api.http) = {
      post: "/admin/v1/login"
      body: "*"
    };
  }

  // Logout
  rpc Logout (LogoutRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/admin/v1/logout"
      body: "*"
    };
    option(gnostic.openapi.v3.operation) = {
      security: [{additional_properties: [{name: "OAuth2PasswordBearer"; value: {}}]}]
    };
  }

  // RefreshToken
  rpc RefreshToken (RefreshTokenRequest) returns (RefreshTokenResponse) {
    option (google.api.http) = {
      post: "/admin/v1/refresh_token"
      body: "*"
    };
    option(gnostic.openapi.v3.operation) = {
      security: [{additional_properties: [{name: "OAuth2PasswordBearer"; value: {}}]}]
    };
  }

  // GetMe
  rpc GetMe (GetMeRequest) returns (user.service.v1.User) {
    option (google.api.http) = {
      get: "/admin/v1/me"
    };
    option(gnostic.openapi.v3.operation) = {
      security: [{additional_properties: [{name: "OAuth2PasswordBearer"; value: {}}]}]
    };
  }
}

// LoginRequest
message LoginRequest {
  string username = 1 [
    json_name = "username",
    (google.api.field_behavior) = REQUIRED
  ];
  string password = 2 [
    json_name = "password",
    (google.api.field_behavior) = REQUIRED
  ];
  string grandType = 3 [
    json_name = "grand_type",
    (google.api.field_behavior) = REQUIRED,
    (gnostic.openapi.v3.property) = {
      description: "Authorization type, the value here is fixed to \"password\", required.",
      default: {string: "password"}
    }
  ];
  string scope = 4 [
    json_name = "scope",
    (google.api.field_behavior) = OPTIONAL
  ];
}

// LoginResponse
message LoginResponse {
  string accessToken = 1 [json_name = "access_token"];
  string refreshToken = 2 [json_name = "refresh_token"];
  string grandType = 3 [json_name = "grand_type"];
  int64 expiresIn = 4 [json_name = "expires_in"];
}

// LogoutRequest
message LogoutRequest {
  string id = 1 [
    json_name = "id",
    (google.api.field_behavior) = REQUIRED
  ];
}

// RefreshTokenRequest
message RefreshTokenRequest {
  string refreshToken = 1 [
    json_name = "refresh_token",
    (google.api.field_behavior) = REQUIRED
  ];
  string grandType = 2 [
    json_name = "grand_type",
    (google.api.field_behavior) = REQUIRED,
    (gnostic.openapi.v3.property) = {
      description: "Authorization type, the value here is fixed to \"password\", required.",
      default: {string: "password"}
    }
  ];
  string scope = 3 [
    json_name = "scope",
    (google.api.field_behavior) = OPTIONAL
  ];
}

// RefreshTokenResponse
message RefreshTokenResponse {
  string refreshToken = 1 [json_name = "refresh_token"];
  string grandType = 2 [json_name = "grand_type"];
  int64 expiresIn = 3 [json_name = "expires_in"];
}

// GetMeRequest
message GetMeRequest {
  string id = 1 [
    json_name = "id",
    (google.api.field_behavior) = REQUIRED
  ];
}